--- a/assets/style.css
+++ b/assets/style.css
@@ -427,15 +427,15 @@ input[type="submit"] {
 
 @media (max-width: 500px) {
     .contact-info {
-        font-size: 8px;
+        font-size: 10px;
     }
     .contact-info-title {
         font-size: 16px;
     }
 }
-@media (max-width: 650px) {
+@media (min-width: 650px) {
     .contact-info {
-        font-size: 10px;
+        font-size: 12px;
     }
     .contact-info-title {
         font-size: 20px;
