--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap);
-
 body {
 	max-width: 1920px;
 	margin: auto;
@@ -112,7 +110,7 @@ h1, h2, h3, h4 {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: black;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
