--- a/assets/style.css
+++ b/assets/style.css
@@ -280,7 +280,7 @@ input[type="submit"] {
 	padding: .5em 1em
 }
 
-@media all and (max-width: 1180px) {
+@media (max-width: 1180px) {
 	.picture {
 		flex : 2;
 	}
@@ -296,7 +296,7 @@ input[type="submit"] {
 	}
 }
 
-@media all and (max-width: 1000px) {
+@media (max-width: 1000px) {
 	#about{
 		flex-direction: column;
 
@@ -355,7 +355,7 @@ input[type="submit"] {
 	}
 }
 
-@media all and (max-width: 650px) {
+@media (max-width: 650px) {
 	.top-header {
 		flex-direction: column;
 		padding-inline: 0;
